# rusty-brain

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RUST_ROADMAP.md  arch_review_remediation_plan.md  install.ps1  install.sh  plugin-manifest.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: ci.yml  release.yml
.opencode/command/: speckit.plan.md  speckit.prd.md
.specify/memory/: constitution.md
commands/: ask.md  recent.md  stats.md
crates/cli/: Cargo.toml
crates/cli/benches/: startup_bench.rs
crates/cli/src/: args.rs  commands.rs  install_cmd.rs  main.rs  opencode_cmd.rs  output.rs
crates/cli/tests/: agent_smoke_test.rs  ask_test.rs  bench_regression_test.rs  bench_test.rs  error_test.rs  find_test.rs  install_json_test.rs  pipe_test.rs  security_test.rs  stats_test.rs  timeline_test.rs  verbose_test.rs
crates/cli/tests/common/: mod.rs
crates/compression/: Cargo.toml
crates/compression/benches/: compress_bench.rs
crates/compression/fuzz/: Cargo.toml
crates/compression/fuzz/corpus/compression_fuzz/: large.txt  valid_bash.txt  valid_read.txt
crates/compression/fuzz/fuzz_targets/: compression_fuzz.rs
crates/compression/src/: bash.rs  config.rs  edit.rs  generic.rs  glob.rs  grep.rs  lang.rs  lib.rs  read.rs  regex_util.rs  truncate.rs  types.rs
crates/compression/tests/: dispatcher.rs  quickstart_smoke.rs  success_criteria.rs
crates/core/: Cargo.toml
crates/core/benches/: context.rs  search.rs  stats.rs  store.rs
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/corpus/search_query_fuzz/: null_bytes.txt  sql_injection.txt  unicode.txt  valid_query.txt
crates/core/fuzz/fuzz_targets/: search_query_fuzz.rs
crates/core/src/: backend.rs  context_builder.rs  file_guard.rs  lib.rs  memvid_store.rs  mind.rs  mind_tests.rs  token.rs
crates/core/src/mind/: lifecycle.rs  locking.rs  mod.rs  read.rs  stats.rs  write.rs
crates/core/tests/: compatibility_smoke.rs  format_compat_test.rs  generate_fixtures.rs  search_compat_test.rs  stats_compat_test.rs  timeline_compat_test.rs  unknown_fields_test.rs
crates/core/tests/common/: mod.rs
crates/core/tests/compatibility/: fixtures.rs  mod.rs
crates/core/tests/integration/: mind_concurrent.rs  mind_context.rs  mind_recovery.rs  mind_roundtrip.rs
crates/hooks/: Cargo.toml
crates/hooks/benches/: hooks_bench.rs
crates/hooks/fuzz/: Cargo.toml
crates/hooks/fuzz/corpus/hook_json_fuzz/: malformed.json  post_tool_use.json  session_start.json  stop.json  truncated.json
crates/hooks/fuzz/fuzz_targets/: hook_json_fuzz.rs
crates/hooks/src/: bootstrap.rs  context.rs  dedup.rs  dispatch.rs  error.rs  git.rs  io.rs  lib.rs  main.rs  manifest.rs  post_tool_use.rs  session_start.rs  smart_install.rs  stop.rs  truncate.rs
crates/hooks/tests/: dedup_test.rs  e2e_test.rs  env_compat_test.rs  git_test.rs  invalid_env_test.rs  io_test.rs  layout_compat_test.rs  legacy_path_test.rs  manifest_test.rs  permissions_test.rs  pipeline_integration_test.rs  plugin_json_test.rs  post_tool_use_test.rs  session_start_test.rs  smart_install_test.rs  stop_test.rs  truncate_test.rs
crates/hooks/tests/common/: mod.rs
crates/opencode/: Cargo.toml
crates/opencode/src/: bootstrap.rs  chat_hook.rs  lib.rs  mind_tool.rs  session_cleanup.rs  sidecar.rs  tool_hook.rs  types.rs
crates/opencode/tests/: chat_hook_test.rs  env_compat_test.rs  failopen_test.rs  logging_test.rs  mind_tool_test.rs  perf_test.rs  pipeline_integration_test.rs  session_cleanup_test.rs  sidecar_test.rs  tool_hook_test.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  context.rs  contract_version.rs  diagnostic.rs  error.rs  hooks.rs  install.rs  lib.rs  observation.rs  observation_tests.rs  platform_event.rs  project_context.rs  session.rs  stats.rs
crates/types/tests/: config_test.rs  error_test.rs  quickstart_validation.rs  round_trip.rs
docs/: developer.md
docs/plans/: 2026-03-04-arch-006-007-008-design.md  2026-03-04-arch-006-007-008-implementation.md  2026-03-05-plugin-marketplace-setup.md
hooks/: hooks.json
packaging/claude-code/: marketplace.json
packaging/claude-code/.claude-plugin/: plugin.json
packaging/claude-code/commands/: search.md
packaging/claude-code/hooks/: hooks.json
skills/memory/: SKILL.md
skills/mind/: SKILL.md
specs/001-project-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-type-system-config/: data-model.md  plan.md  prd.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-core-memory-engine/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/004-tool-output-compression/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/005-platform-adapter-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-claude-code-hooks/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/007-cli-scripts/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/008-opencode-plugin/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/009-plugin-packaging/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/010-testing-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-agent-installs/: ar.md  data-model.md  plan.md  prd.md  quickstart.md  research.md  sec.md  spec.md  tasks.md
specs/012-default-memory-path/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: check_manifest_drift.sh  install_script_test.bats  install_script_test.ps1
tests/fixtures/: README.md  edge_cases.mv2  edge_cases.stats.json  expected_results.json  medium_100obs.mv2  medium_100obs.stats.json  small_10obs.mv2  small_10obs.stats.json  ts_baselines.json
(+42 files in other folders)
