[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/brianluby/rusty-brain"
authors = ["Brian Luby"]

[workspace.dependencies]
# Core storage
memvid-core = { git = "https://github.com/brianluby/memvid/", rev = "fbddef4bff6ac756f91724681234243e98d5ba04", features = ["lex"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ulid = { version = "1", features = ["serde"] }

# File locking
fs2 = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# Tracing subscriber (for CLI log initialization)
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Versioning
semver = "1"

# Testing
tempfile = "3"
temp-env = "0.3.6"
assert_cmd = "2"
predicates = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
correctness = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
