[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI scripts (find, ask, stats, timeline) for rusty-brain"

[dependencies]
clap = { workspace = true }

[lints]
workspace = true
