[package]
name = "rusty-brain-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI scripts (find, ask, stats, timeline) for rusty-brain"

[[bin]]
name = "rusty-brain"
path = "src/main.rs"

[dependencies]
rusty-brain-core = { path = "../core" }
types = { path = "../types" }
opencode = { path = "../opencode" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
fs2 = { workspace = true }

[lints]
workspace = true
