[package]
name = "compression"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tool-output compression for rusty-brain"

[dependencies]
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compress_bench"
harness = false

[lints]
workspace = true
