[package]
name = "core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Memory engine (Mind) for rusty-brain"

[dependencies]
memvid-core = { workspace = true }

[lints]
workspace = true
