[package]
name = "hooks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Claude Code hook binaries for rusty-brain"

[[bin]]
name = "rusty-brain"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
rusty-brain-core = { path = "../core" }
platforms = { path = "../platforms" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hooks_bench"
harness = false

[lints]
workspace = true
