[package]
name = "opencode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenCode editor adapter for rusty-brain"

[dependencies]
rusty-brain-core = { path = "../core" }
types = { path = "../types" }
platforms = { path = "../platforms" }
compression = { path = "../compression" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true
