[package]
name = "types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types and errors for rusty-brain"

[dependencies]
serde = { workspace = true }

[lints]
workspace = true
