[package]
name = "core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.rusty-brain-core]
path = ".."

[dependencies.types]
path = "../../types"

[[bin]]
name = "search_query_fuzz"
path = "fuzz_targets/search_query_fuzz.rs"
doc = false
